feat: implement cloudfeedauth info endpoint
